--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1267,7 +1267,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rVvcHYkoHn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1748,7 +1748,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rVRYl4KOjp button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2235,7 +2235,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rVvcHYkoHn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2737,7 +2737,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rVvcHYkoHn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3218,7 +3218,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rXLwulRpsP button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -3702,7 +3702,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rXLwulRpsP button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -4186,7 +4186,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #efefef;
+  background-color: #2ac15b;
 }
 .cid-rVvcHYkoHn button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
